--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -3,12 +3,14 @@
 }
 
 .logo {
-    /*position: absolute;*/
-    /*left: 100px;*/
-    /*top: 10%;*/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     font-family: 'dymaxon', sans-serif;
     font-weight: normal;
-    font-size: 40px;
+    font-size: 50px;
+
 }
 
 ul {
@@ -73,9 +75,8 @@ a {
 
 .profileLogin {
     display: flex;
-    margin: 0 50px 0 60px;
-    width: 46px;
-    height: 46px;
+    width: 50px;
+    height: 50px;
     /* background: url(...); */
     border: 1px solid rgba(170, 120, 186, 0.2);
     filter: drop-shadow(0px 2px 8px #a574b4);
@@ -83,33 +84,61 @@ a {
     cursor: pointer ;
     object-fit: cover;
 }
+.menuButtons{
+    display: flex;
+    gap: 40px;
+    align-items: center;
+}
 .navItem{
-    position: relative;
+    color: rgba(255, 255, 255, 0.80);
+    font-family: Nunito Sans, serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 0.8px;
+    text-transform: uppercase;
 }
-.navItem:hover::before{
-    transform: scaleX(1);
-    transition: transform 0.5s;
-    /*width: 126px;*/
-    /*height: 1px;*/
-    /*background: linear-gradient(rgba(158, 199, 247, 0.21) 0%, rgba(99, 181, 209, 0.46) 22.17%, #fff 50.73%, rgba(181, 76, 213, 0.67) 78.82%, rgba(159, 188, 227, 0.65) 100%);*/
-    /*filter: drop-shadow(0px 2px 20px rgba(143, 188, 242, 0.99));*/
-}
-.navItem::before{
-    content: '';
-    width: 100%;
-    height: 1px;
-    padding: 1px;
-    background: linear-gradient(rgba(158, 199, 247, 0.21) 0%, rgba(99, 181, 209, 0.46) 22.17%, #fff 50.73%, rgba(181, 76, 213, 0.67) 78.82%, rgba(159, 188, 227, 0.65) 100%);
-    filter: drop-shadow(0px 2px 2px rgba(143, 188, 242, 0.1));
+.navButton{
+    border-radius: 18px;
+    border: 0.5px solid #FFF;
+    background: rgba(255, 255, 255, 0.05);
+    padding: 13px 25px;
 
-    position: absolute;
-    left: 0;
-    bottom: -8px;
-    transform: scaleX(0);
-    transition: transform 0.5s;
-    transform-origin: center;
-    border-radius: 5px;
+    color: #FFF;
+    text-align: center;
+    font-family: Nunito Sans, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.8px;
+    text-transform: uppercase;
 }
+/*.navItem:hover::before{*/
+/*    transform: scaleX(1);*/
+/*    transition: transform 0.5s;*/
+/*    !*width: 126px;*!*/
+/*    !*height: 1px;*!*/
+/*    !*background: linear-gradient(rgba(158, 199, 247, 0.21) 0%, rgba(99, 181, 209, 0.46) 22.17%, #fff 50.73%, rgba(181, 76, 213, 0.67) 78.82%, rgba(159, 188, 227, 0.65) 100%);*!*/
+/*    !*filter: drop-shadow(0px 2px 20px rgba(143, 188, 242, 0.99));*!*/
+/*}*/
+/*.navItem::before{*/
+/*    content: '';*/
+/*    width: 100%;*/
+/*    height: 1px;*/
+/*    padding: 1px;*/
+/*    background: linear-gradient(rgba(158, 199, 247, 0.21) 0%, rgba(99, 181, 209, 0.46) 22.17%, #fff 50.73%, rgba(181, 76, 213, 0.67) 78.82%, rgba(159, 188, 227, 0.65) 100%);*/
+/*    filter: drop-shadow(0px 2px 2px rgba(143, 188, 242, 0.1));*/
+
+/*    position: absolute;*/
+/*    left: 0;*/
+/*    bottom: -8px;*/
+/*    transform: scaleX(0);*/
+/*    transition: transform 0.5s;*/
+/*    transform-origin: center;*/
+/*    border-radius: 5px;*/
+/*}*/
 .active{
     transition: transform 0.5s;
 }
@@ -177,3 +206,10 @@ a {
     font-weight: 500;
 }
 
+.menu{
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
