--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -114,6 +114,11 @@ a {
     line-height: normal;
     letter-spacing: 0.8px;
     text-transform: uppercase;
+    transition: 0.3s all ease;
+}
+.navButton:hover{
+    background: rgb(20, 65, 223);
+    transition: 0.3s all ease;
 }
 /*.navItem:hover::before{*/
 /*    transform: scaleX(1);*/
