update Spotlight for model profile

--- a/client/src/pages/ModelProfile/ModelProfile.module.css
+++ b/client/src/pages/ModelProfile/ModelProfile.module.css
@@ -319,8 +319,12 @@
     background: #141414;
     backdrop-filter: blur(10px);
     cursor: pointer;
+    border: 1px solid rgba(255, 255, 255, 0);
 }
-
+.categoriesItem:hover{
+    border: 1px solid #FFF;
+    transition: all 0.3s ease;
+}
 .categoriesItem p {
     margin: 0;
     color: #FFF;
