--- a/client/src/components/TypeOfSessions/TypeOfSessions.module.css
+++ b/client/src/components/TypeOfSessions/TypeOfSessions.module.css
@@ -1,8 +1,8 @@
 .sessions{
     display: flex;
     justify-content: center;
-    gap: 15px;
+    gap: 20px;
 }
 .active{
-    box-shadow: 0px 0px 8px 0px rgba(255, 255, 255, 0.55) !important;
+    border: 1px solid #FEFFFF !important;
 }
