--- a/client/src/pages/ModelProfile/ModelProfile.module.css
+++ b/client/src/pages/ModelProfile/ModelProfile.module.css
@@ -107,26 +107,30 @@
 
 .edit {
     position: absolute;
-    right: 58px;
-    bottom: 36px;
-
+    right: -1100px;
+    top: 0;
 }
 
 .secondButton {
-    width: 130px;
+    border: none;
+    width: 250px;
     height: 50px;
-    border-radius: 25px;
-    background: #151517;
-    border: 1px solid #7dabc3;
     cursor: pointer;
-    color: white;
-    font-size: 14px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 20px auto 0;
-    font-family: 'Nunito Sans', sans-serif;
-    font-weight: 500;
+    border-radius: 20px;
+    background: #FFF;
+
+    color: #000;
+    text-align: center;
+    font-family: Nunito Sans, sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 145%; /* 29px */
+    text-transform: capitalize;
 }
 
 .connectContainer {
