--- a/client/src/pages/Profile.module.css
+++ b/client/src/pages/Profile.module.css
@@ -545,3 +545,26 @@ margin-right: 150px;
     line-height: normal;
     text-transform: capitalize;
 }
+.profileContainer{
+
+}
+/*@media only screen and (min-width: 1200px) {*/
+/*    .profileContainer {*/
+/*        transform: scale(0.85) !important;*/
+/*    }*/
+/*}*/
+/*@media only screen and (min-width: 1920px) {*/
+/*    .profileContainer {*/
+/*        transform: scale(0.8);*/
+/*    }*/
+/*}*/
+/*@media only screen and (max-width: 1366px) {*/
+/*    .profileContainer {*/
+/*        transform: scale(0.55);*/
+/*    }*/
+/*}*/
+/*@media only screen and (max-width: 1300px) {*/
+/*    .profileContainer {*/
+/*        transform: scale(0.55) !important;*/
+/*    }*/
+/*}*/
