--- a/client/src/pages/SessionBuilder/SessionBuilder.module.css
+++ b/client/src/pages/SessionBuilder/SessionBuilder.module.css
@@ -161,6 +161,7 @@
 @media only screen and (min-width: 1920px) {
     .container {
         transform: scale(1);
+        padding-top: 55px;
     }
 }
 @media only screen and (max-width: 1366px) {
